# tauri-plugin-android-prevent-screen-capture

./: Cargo.toml  README.md
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: PreventScreenCapture.kt
android/src/test/java/: ExampleUnitTest.kt
src/: lib.rs
