[package]
name = "tauri-plugin-android-prevent-screen-capture"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-android-prevent-screen-capture"
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["tauri", "android", "screenshot", "screen", "capture"]
authors = ["OkaYu"]
description = "Prevent screen capture on Tauri app for Android."
repository = "https://github.com/aiueo13/tauri-plugin-android-prevent-screen-capture"
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tauri = { version = "2" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
